fix(filter-panel): fixed alignment of filter group items

--- a/packages/styles/scss/components/filter-panel/_filter-panel.scss
+++ b/packages/styles/scss/components/filter-panel/_filter-panel.scss
@@ -265,9 +265,6 @@
     border-bottom: none;
 
     .#{$prefix}--accordion__heading {
-      padding-top: calc(
-        (#{$container-03} - #{map-get($body-long-01, 'line-height')}) / 2
-      );
       display: flex;
       align-items: center;
     }
